Home-view & Styles.css

--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/styles.css
@@ -1,36 +1,25 @@
 
-.background-yellow {
-    -fx-background-color: #f5c518;
-}
-
-.background-black {
-    -fx-background-color: #000000;
-}
-
-.background-light-black {
+.background-black{
     -fx-background-color: #454545;
 }
 
-.text-yellow {
-    -fx-text-fill: #f5c518;
-}
-
-.text-white {
-    -fx-text-fill: #ffffff;
+.move-cell-title{
+    -fx-text-fill: orange;
+    -fx-margin: 10;
 }
 
 .list-view .list-cell:even {
-    -fx-background-color: black;
-    -fx-text-fill: white;
+    -fx-background-color: white;
+    -fx-text-fill: black;
 }
 
 .list-view .list-cell:odd {
-    -fx-background-color: black;
-    -fx-text-fill: white;
+    -fx-background-color: white;
+    -fx-text-fill: black;
 }
 
 .movie-cell {
-    -fx-background-color: black;
+    -fx-background-color: white;
     -fx-padding: 2;
 }
 
