--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -1,18 +1,18 @@
 
 .background-yellow {
-    -fx-background-color: #f5c518;
+    -fx-background-color: ##CB5684;
 }
 
 .background-black {
-    -fx-background-color: #000000;
+    -fx-background-color: black;
 }
 
 .background-light-black {
-    -fx-background-color: #454545;
+    -fx-background-color: #2B98D4;
 }
 
 .text-yellow {
-    -fx-text-fill: #f5c518;
+    -fx-text-fill: #CB5684;
 }
 
 .text-white {
@@ -25,12 +25,12 @@
 }
 
 .list-view .list-cell:odd {
-    -fx-background-color: black;
+    -fx-background-color: #C3ECDC;
     -fx-text-fill: white;
 }
 
 .movie-cell {
-    -fx-background-color: black;
+    -fx-background-color: #C3ECDC;
     -fx-padding: 2;
 }
 
